--- a/.github/workflows/release-workflow.yml
+++ b/.github/workflows/release-workflow.yml
@@ -84,97 +84,97 @@ jobs:
         asset_path: ./build/libs/unipipe-service-broker-1.0.0.jar
         asset_name: unipipe-service-broker.jar
         asset_content_type: application/zip
-  release-cli:
-    # sadly, triggering on a successful build workflow and then downloading the artifacts from there is not yet
-    # possible with github actions, see https://github.com/actions/download-artifact/issues/3
-    # if it was, we could avoid the rebuild and this step could look like this
-    # on:
-    #   workflow_run:
-    #     workflows: ["build"]
-    #     branches: [refs/tags/v*]
-    #     types:
-    #       - completed
+  # release-cli:
+  #   # sadly, triggering on a successful build workflow and then downloading the artifacts from there is not yet
+  #   # possible with github actions, see https://github.com/actions/download-artifact/issues/3
+  #   # if it was, we could avoid the rebuild and this step could look like this
+  #   # on:
+  #   #   workflow_run:
+  #   #     workflows: ["build"]
+  #   #     branches: [refs/tags/v*]
+  #   #     types:
+  #   #       - completed
 
-    # instead, we now simply rebuild the whole thing in a single workflow and a single job
-    # not pretty but gets the job done
+  #   # instead, we now simply rebuild the whole thing in a single workflow and a single job
+  #   # not pretty but gets the job done
 
 
-    # if condition becomes relevant when cross workflow artifact downloads will be available
-    # if: ${{ github.event.workflow_run.conclusion == 'success' }}
-    timeout-minutes: 3 # Generally our pipeline takes 1 minute to build everything. 
-    runs-on: ubuntu-latest
-    needs: create-release
-    steps:
-      - uses: actions/checkout@v2
-      - uses: denoland/setup-deno@main
-        with:
-          deno-version: "~1.21"
-      - uses: actions/cache@v2
-        with:
-          path: ~/.cache/deno # see https://deno.land/manual/linking_to_external_code
-          key: ${{ runner.os }}-deno # it seems there's no particular cache keying required
-          restore-keys: |
-            ${{ runner.os }}-deno
-      - name: Build and Test 
-        run: |
-          deno --version
-          deno info
+  #   # if condition becomes relevant when cross workflow artifact downloads will be available
+  #   # if: ${{ github.event.workflow_run.conclusion == 'success' }}
+  #   timeout-minutes: 3 # Generally our pipeline takes 1 minute to build everything. 
+  #   runs-on: ubuntu-latest
+  #   needs: create-release
+  #   steps:
+  #     - uses: actions/checkout@v2
+  #     - uses: denoland/setup-deno@main
+  #       with:
+  #         deno-version: "~1.21"
+  #     - uses: actions/cache@v2
+  #       with:
+  #         path: ~/.cache/deno # see https://deno.land/manual/linking_to_external_code
+  #         key: ${{ runner.os }}-deno # it seems there's no particular cache keying required
+  #         restore-keys: |
+  #           ${{ runner.os }}-deno
+  #     - name: Build and Test 
+  #       run: |
+  #         deno --version
+  #         deno info
 
-          cd cli
-          ./build.sh
+  #         cd cli
+  #         ./build.sh
 
-          cd test
-          ./all.sh ../bin/unipipe
-      # upload steps
-      - name: Upload unipipe-cli-x86_64-apple-darwin
-        uses: actions/upload-release-asset@v1
-        env:
-          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-        with:
-          upload_url:  ${{ needs.create-release.outputs.upload-url }}
-          asset_path: ./cli/bin/unipipe-cli-x86_64-apple-darwin
-          asset_name: unipipe-cli-x86_64-apple-darwin
-          asset_content_type: application/octet-stream
-      - name: Upload unipipe-cli-x86_64-unknown-linux-gnu
-        uses: actions/upload-release-asset@v1
-        env:
-          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-        with:
-          upload_url:  ${{ needs.create-release.outputs.upload-url }}
-          asset_path: ./cli/bin/unipipe-cli-x86_64-unknown-linux-gnu
-          asset_name: unipipe-cli-x86_64-unknown-linux-gnu
-          asset_content_type: application/octet-stream
-      - name: Upload unipipe-cli-x86_64-pc-windows-msvc.exe
-        uses: actions/upload-release-asset@v1
-        env:
-          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-        with:
-          upload_url:  ${{ needs.create-release.outputs.upload-url }}
-          asset_path: ./cli/bin/unipipe-cli-x86_64-pc-windows-msvc.exe
-          asset_name: unipipe-cli-x86_64-pc-windows-msvc.exe
-          asset_content_type: application/octet-stream
-  release-terraform-runner-docker-image:
-    runs-on: ubuntu-latest
-    needs: release-cli
-    steps:
-    - name: Set up Docker Buildx
-      uses: docker/setup-buildx-action@v2
-    - name: Create docker meta
-      id: meta
-      uses: docker/metadata-action@v4
-      with:
-        images: ghcr.io/fnts-public/unipipe-terraform-runner
-        tags: type=ref,event=tag
-    - name: Login to GitHub Container Registry
-      uses: docker/login-action@v1 
-      with:
-        registry: ghcr.io
-        username: ${{ github.repository_owner }}
-        password: ${{ secrets.GITHUB_TOKEN }}
-    - name: Build and push
-      uses: docker/build-push-action@v3
-      with:
-        context: "{{defaultContext}}:terraform-runner"
-        push: ${{ startsWith(github.ref, 'refs/tags/') }}
-        labels: ${{ steps.meta.outputs.labels }}
-        tags: ${{ steps.meta.outputs.tags }}
+  #         cd test
+  #         ./all.sh ../bin/unipipe
+  #     # upload steps
+  #     - name: Upload unipipe-cli-x86_64-apple-darwin
+  #       uses: actions/upload-release-asset@v1
+  #       env:
+  #         GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+  #       with:
+  #         upload_url:  ${{ needs.create-release.outputs.upload-url }}
+  #         asset_path: ./cli/bin/unipipe-cli-x86_64-apple-darwin
+  #         asset_name: unipipe-cli-x86_64-apple-darwin
+  #         asset_content_type: application/octet-stream
+  #     - name: Upload unipipe-cli-x86_64-unknown-linux-gnu
+  #       uses: actions/upload-release-asset@v1
+  #       env:
+  #         GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+  #       with:
+  #         upload_url:  ${{ needs.create-release.outputs.upload-url }}
+  #         asset_path: ./cli/bin/unipipe-cli-x86_64-unknown-linux-gnu
+  #         asset_name: unipipe-cli-x86_64-unknown-linux-gnu
+  #         asset_content_type: application/octet-stream
+  #     - name: Upload unipipe-cli-x86_64-pc-windows-msvc.exe
+  #       uses: actions/upload-release-asset@v1
+  #       env:
+  #         GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+  #       with:
+  #         upload_url:  ${{ needs.create-release.outputs.upload-url }}
+  #         asset_path: ./cli/bin/unipipe-cli-x86_64-pc-windows-msvc.exe
+  #         asset_name: unipipe-cli-x86_64-pc-windows-msvc.exe
+  #         asset_content_type: application/octet-stream
+  # release-terraform-runner-docker-image:
+  #   runs-on: ubuntu-latest
+  #   needs: release-cli
+  #   steps:
+  #   - name: Set up Docker Buildx
+  #     uses: docker/setup-buildx-action@v2
+  #   - name: Create docker meta
+  #     id: meta
+  #     uses: docker/metadata-action@v4
+  #     with:
+  #       images: ghcr.io/fnts-public/unipipe-terraform-runner
+  #       tags: type=ref,event=tag
+  #   - name: Login to GitHub Container Registry
+  #     uses: docker/login-action@v1 
+  #     with:
+  #       registry: ghcr.io
+  #       username: ${{ github.repository_owner }}
+  #       password: ${{ secrets.GITHUB_TOKEN }}
+  #   - name: Build and push
+  #     uses: docker/build-push-action@v3
+  #     with:
+  #       context: "{{defaultContext}}:terraform-runner"
+  #       push: ${{ startsWith(github.ref, 'refs/tags/') }}
+  #       labels: ${{ steps.meta.outputs.labels }}
+  #       tags: ${{ steps.meta.outputs.tags }}
