--- a/.github/workflows/build-workflow.yml
+++ b/.github/workflows/build-workflow.yml
@@ -31,6 +31,7 @@ jobs:
       run: ./gradlew build
 
   release-service-broker:
+    needs: build-service-broker  
     runs-on: ubuntu-latest
     steps:
     - name: Bump version and push tag
