--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -9,4 +9,4 @@ git:
   
 cors:
     originPatterns: ${CORS_ORIGINS}
-logging.level.org.springframework.web.filter.CommonsRequestLoggingFilter: DEBUG
+logging.level.org.springframework.web.filter.CommonsRequestLoggingFilter: TRACE
